# HumanRobotCommandControl

./: CMakeLists.txt  README.md  drawPlot.py  gantt-group-tasks-together.html  moveDll.bat  pattern.docx  styled-scatter.html
PySrc/: De_cruve.html  HRCC.py  HRCC_opter.py  Human.py  MyDifferentialEvolution.py  Robot.py  test_de.py
data/: cfg.txt  pyCfg.txt
src/: CMakeLists.txt  HRCCSolution.cpp  HRCCSolution.h  Human.cpp  Human.h  ReadCfg.cpp  ReadCfg.h  Robot.cpp  Robot.h  cppHRCC_cppHRCC.cpp  cppHRCC_cppHRCC.h  simple_test.cpp  stadfx.h
